# Real_Time_Event_Streaming_And_Messaging_System

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt
docs/: DESIGN.md  design_decisions.txt
examples/: CMakeLists.txt  example_usage.cpp
include/network/: common.hpp  messaging_node.hpp  socket.hpp  socket_utils.hpp
scripts/: run_all.ps1  run_all.sh
src/: test.cpp
src/app/: main.cpp
src/network/: client.cpp  messaging_node.cpp  server.cpp  socket.cpp
tests/: CMakeLists.txt  test_app.cpp
